--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="ktbe">
 <head>
-    <title>Ausgaben des Kanton Bern</title>
+    <title>Ausgaben der Stadt Brig-</title>
 
     <!--
         kanton-bern-finanzen https://github.com/KeeTraxx/kanton-bern-finanzen
@@ -148,7 +148,7 @@
     <div id="info">
         <h1>
             <div class="crest"></div>
-            Ausgaben des Kanton Bern
+            Ausgaben der Stadt Brig
         </h1>
         <ol class="breadcrumb" breadcrumbs></ol>
         <table finance-table class="table table-condensed table-striped table-hover">
